# emresource-screencap

./: .pre-commit-config.yaml  LICENSE  README.md  cli.mjs  daemon.mjs  package.json  pyproject.toml  requirement.in  requirements.txt
emresource_screencap/: cli.py  scrape.py
src/: constants.mjs  flow.mjs  scrape.mjs  scrapeOptions.mjs
test/: cli.e2e.test.mjs  hero.flow.test.mjs  scrapeOptions.test.mjs
test/fixtures/: login-mock.html  server.mjs
