[tool.poetry]
name = "emresource-screencap"
version = "0.1.0"
description = "Log in to EMResource, select a region, save a full-page screenshot."
authors = []
packages = [{ include = "emresource_screencap" }]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.49.0"
playwright-stealth = "^2.0.2"

[tool.poetry.scripts]
emresource-scrape = "emresource_screencap.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.7"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
